--- a/ML Prequisite.ipynb
+++ b/ML Prequisite.ipynb
@@ -209,8 +209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gradient decent wrt x : 2*x*y + y**3*cos(x)\n",
-      "gradient decent wrt y : x**2 + 3*y**2*sin(x)\n"
+      "gradient wrt x : 2*x*y + y**3*cos(x)\n",
+      "gradient wrt y : x**2 + 3*y**2*sin(x)\n"
      ]
     }
    ],
