--- a/ML Prequisite.ipynb
+++ b/ML Prequisite.ipynb
@@ -140,8 +140,8 @@
    "id": "de75086b-69ac-407e-8be5-2305422a2944",
    "metadata": {},
    "source": [
-    "The gradient desecnt wrt x is : 2xy + y^3cos(x)\n",
-    "The gradient desecnt wrt y is : x^2 + 3y^2sin(x)"
+    "The gradient wrt x is : 2xy + y^3cos(x)\n",
+    "The gradient wrt y is : x^2 + 3y^2sin(x)"
    ]
   },
   {
