--- a/ML Prequisite.ipynb
+++ b/ML Prequisite.ipynb
@@ -225,8 +225,8 @@
     "grad_x = sp.diff(expression(x,y),x)\n",
     "grad_y = sp.diff(expression(x,y),y)\n",
     "\n",
-    "print(f\"gradient decent wrt x : {grad_x}\")\n",
-    "print(f\"gradient decent wrt y : {grad_y}\")"
+    "print(f\"gradient wrt x : {grad_x}\")\n",
+    "print(f\"gradient wrt y : {grad_y}\")"
    ]
   },
   {
